Further work on Synthesis
Continuing Synthesis additions.  Some cleanup